# object-detection-local-deployment

./: README.md  pyproject.toml  xport.py  yolo.py
