[project]
name = "initial_task"
version = "0.1.0"
description = "YOLOv8n ONNX CPU deployment with OpenCV"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "onnxruntime>=1.24.1",
    "onnxslim>=0.1.85",
    "opencv-python>=4.13.0.92",
    "opencv-stubs>=0.1.2",
    "ultralytics>=8.4.14",
]

